{
    "name": "System Control Input Actions",
    "maps": [
        {
            "name": "Video",
            "id": "dd82286a-cf9e-4442-8fdf-ac6003e859a6",
            "actions": [
                {
                    "name": "ToggleVideo",
                    "type": "Button",
                    "id": "0f178377-9b78-4d42-aed8-473b44154969",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sweep",
                    "type": "Value",
                    "id": "9fafe322-568a-467b-b69e-d7a141d81441",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63cccdc6-4a5a-47b3-b65b-855fa22bfe52",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleVideo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "58e536f9-6a03-47e3-8fc8-72a8e51b87f3",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sweep",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e0ff6f94-fa58-4f6f-986e-a1ad67d9ec87",
                    "path": "<XRController>/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sweep",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bb225f62-0faf-4777-ae0f-3e748ecaa63a",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sweep",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Audio",
            "id": "ff61653d-eb11-4ece-9e38-8f7b276fea67",
            "actions": [
                {
                    "name": "DurationBimanual",
                    "type": "Value",
                    "id": "222fc195-7dff-4108-92d0-65dcf622a776",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VolumeBimanual",
                    "type": "Value",
                    "id": "c9f19ce4-caf3-4a39-8e86-2816b1b9e9dd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ConnectSequentialNotes",
                    "type": "Value",
                    "id": "054c771f-7567-4461-83f1-ef8e402a79fb",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayNotes",
                    "type": "Button",
                    "id": "ca3433e2-67fe-4bb6-af47-032c6a05e775",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveSequentialNote",
                    "type": "Value",
                    "id": "be9b922f-e5ff-40f1-bdc8-c9ace5dfbedd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeleteNote",
                    "type": "Button",
                    "id": "7a5c40c7-b8da-4de6-a619-663c05ccfe00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveNote",
                    "type": "Button",
                    "id": "9ab10822-443a-40de-9026-0c88933d618d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Two Modifiers",
                    "id": "9ddb63d5-bffd-4263-a984-0f2bfce338a0",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DurationBimanual",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "b0b095d6-eae9-4d69-9f44-4b78c07be589",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DurationBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "9cd22472-9501-40c2-b35d-626dd4468c57",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DurationBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "df85bed0-47af-4c3e-9003-3f30120c4c77",
                    "path": "<XRController>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DurationBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Two Modifiers",
                    "id": "204144d0-a1d6-44c8-be9d-318113c2cffd",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeBimanual",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "eed125be-b200-4e7c-bc59-5f45d9ef2661",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "669b5d05-d89e-4469-ad56-0f5ab90fc4cf",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "197dbdce-0a04-4ce7-89c8-163bd3f486ec",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeBimanual",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Two Modifiers",
                    "id": "e6206f19-7e97-4527-b646-e6eac4c68e56",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConnectSequentialNotes",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "84c010bf-b03f-4309-ae54-a9bca1f85718",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConnectSequentialNotes",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "5a853197-ced4-408d-92ea-6f9575767cbc",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConnectSequentialNotes",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "09e309ca-913c-4530-b0ce-bca528f349e3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConnectSequentialNotes",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "960080a8-0dcc-4f48-a146-19daf004465b",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNotes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a93371b-dc2c-4bea-9965-82825107f7de",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3df3c8dd-c9a4-49dd-8dbc-27090f206964",
                    "path": "<XRController>{RightHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec8ce902-69d9-4c65-b1b7-bd4a439d8163",
                    "path": "<XRController>{LeftHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "c40d9b38-9d7b-4031-bb94-1e47f642fcab",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveSequentialNote",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "b3f21b05-72f9-4e0c-a6cb-c14b11a5ced0",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveSequentialNote",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "afdd8bb6-edc8-47fe-818f-61d0c3d6fd78",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveSequentialNote",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e5bc15cc-7a30-45b2-a4a0-9e87cbb9643b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveSequentialNote",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "General",
            "id": "3801c309-f58f-4ecc-ae63-ba840f48edba",
            "actions": [
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "ae4a8477-62c6-4890-a08c-3fb2d6ae88b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TogglePieUI",
                    "type": "Button",
                    "id": "3cd71f03-238e-4bdf-8191-421fdd7acc85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceNote",
                    "type": "Button",
                    "id": "b973169f-949d-42a7-92b1-6eab8fb9b4da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleHelp",
                    "type": "Button",
                    "id": "1af72b03-74e1-47cb-ae3e-826e3d01487e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f0c86ea-9905-42a7-85e9-bb72f0afd4d3",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "28640df0-1d10-4eae-8d66-e6562d089c3d",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePieUI",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "347a519a-3406-4663-9f45-45f99deeae27",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePieUI",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "09c1e332-bc72-4893-a231-21670c5bf8c8",
                    "path": "<XRController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePieUI",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "87b3ee4d-791b-46a9-bf3e-f69f18460b45",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePieUI",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac960739-bc5f-4688-91a5-2373a778f5b0",
                    "path": "<XRController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161cbe8f-6d8d-4fd7-98f1-2d10ae56a5e6",
                    "path": "<XRController>{LeftHand}/menuButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHelp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PieMenu",
            "id": "bb3da3e2-7816-4b92-b088-2c3f12663db5",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3aba35ad-4c61-4a1b-bb27-9748bf9113ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b5a13d2-0091-4a97-a063-b5467614c288",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}